[package]
name = "esp32-hello"
version = "0.1.0"
edition = "2018"

[dependencies]
esp32-sys = { path = "../esp32-sys/esp32-sys" }
esp32-hal = { path = "../esp32-hal" }
embedded-hal = "0.2.3"
nb = "0.1.2"

[profile.dev]
lto = false 
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = false
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1
